--- a/indico/htdocs/sass/partials/_core.scss
+++ b/indico/htdocs/sass/partials/_core.scss
@@ -95,11 +95,6 @@
     color: #aaa;
 }
 
-.highlighted-area:hover .i-button {
-    -webkit-transition: box-shadow .5s;
-    box-shadow: 0 0 1px 1px rgba(100, 100, 100, 0.2);
-}
-
 .prevent-scrolling {
     overflow-x: hidden;
     overflow-y: auto;
